--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,5 @@ jobs:
           echo ""
           echo ""
           echo "Hello $NAME. ${{ vars.JOB_NAME }}"
+          echo "${{github.run-name}}"
+          echo "${{github.ref}}"
