--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,7 @@ jobs:
           echo ""
           echo "Hello $NAME. ${{ vars.JOB_NAME }}"
           echo "${{github.run-name}}"
+          echo "${{github.run-name}}"
           echo "${{github.ref}}"
+          echo "${{env.NAME}}"
+          echo "${{env.env_var}}"
